fixed y overflown from techlist

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,13 +27,11 @@
   align-items: center;
   -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
-  border-radius: 32px;
+  border-radius: 18px;
   box-shadow: inset 0 -7px 11px #a48fff1f;
-  display: flex;
+  padding: 12px;
 
   position: relative;
-  width: -moz-max-content;
-  width: max-content;
   transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) box-shadow;
 }
 
